# leoric.kb.ai.huggingface

./: .gitignore  main.py  pyproject.toml
src/leoric_kb_ai_huggingface/: __init__.py  finetune.ipynb  finetune_classification.ipynb  finetune_lightning.ipynb  finetune_qa.ipynb  helper_data.py  helper_model.py  helper_util.py  stable_diffusion.ipynb  test.ipynb  transformer_translation.ipynb
src/leoric_kb_ai_huggingface/data/: __init__.py
src/leoric_kb_ai_huggingface/databricks-dolly-15k-dataset/: databricks-dolly_augmented.csv
